[metadata]
name = p3lib
version = 1.1.99
author = Paul Austen
author_email = pausten.os@gmail.com
description = A group of python modules for networking, plotting data, config storage, automating boot scripts, ssh access and user input output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pjaos/p3lib
project_urls =
    Bug Tracker = https://github.com/pjaos/p3lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  paramiko>=2.9.3
  pillow>=9.2.0

# This library uses these libraries.
# However as users may wish to install the library without support
# for some functionality we don't force the installation of all thge dependant modules.
# Note that installation of some packages may take a long time (E.G bokeh on a raspberry Pi platform).
#install_requires =
#    pytest
#    cryptography
#    plotly
#    pandas
#    bokeh

[options.packages.find]
where = src
