[tool.poetry]
name = "p3lib"
version = "1.1.107"
description = "A group of python modules for networking, plotting data, config storage, automating boot scripts, ssh access and user input output."
authors = ["Paul Austen <pjaos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.6"
click = "*"
requests = "*"
nicegui = "*"
plotly = "*"


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"