[tool.poetry]
name = "p3lib"
version = "1.1.109"
description = "A group of python modules for networking, plotting data, config storage, automating boot scripts, ssh access and user input output."
authors = ["Paul Austen <pjaos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
Jinja2 = "^3.1.6"
click = "*"
requests = "^2.33.0"
nicegui = "^3.10.0"
plotly = "*"
h11 = "^0.16.0"
aiohttp = "^3.13.4"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"